<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_forgot"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_forgot"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/forgot_password_1"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/email"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="17dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/etEnterEmail"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:hint="@string/enter_email"
                android:textColorHint="@color/grey"
                android:layout_marginHorizontal="17dp"
                android:background="@drawable/edittext_border"
                android:paddingHorizontal="10dp"
                android:inputType="textEmailAddress"/>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/submit"
                android:layout_marginHorizontal="22dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>