<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyOtpActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_otp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_otp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">

            <LinearLayout
                android:id="@+id/backButtonOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/back"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:paddingStart="5dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/otp_verification"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cdOTP"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <TextView
                android:id="@+id/txtVerifyYourEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_your_email"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>

            <com.chaos.view.PinView
                android:id="@+id/pinView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:itemCount="6"
                android:layout_gravity="center"
                android:inputType="number"
                android:elevation="10dp"
                android:textColor="@color/black"
                app:itemWidth="40dp"
                app:itemHeight="40dp"
                app:itemRadius="10dp"
                app:itemSpacing="8dp"
                app:viewType="rectangle"
                style="@style/PinWidget.PinView"/>

            <TextView
                android:id="@+id/txtResendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="12dp"/>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnConfirmOtp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/confirm_otp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="55dp"
            android:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>

</RelativeLayout>